Adding Privacy Policy Page

--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
             <small class="copyright"><a href="http://themes.3rdwavemedia.com" target="_blank">Template</a> Provided by <a href="https://www.linkedin.com/in/xiaoying" target="_blank">Xiaoying Riley</a> for developers under the <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License (CC BY 3.0)</a></small>
 			<br>
 			<small class="copyright">Pop-up Plugin</a> Provided by <a href="http://www.jacklmoore.com/colorbox/" target="_blank">Jack Moore</a></small>
+			<br>
+			<small class="copyright"><a href="https://runexa.github.io/privacy-policy/" target="_blank">Privacy Policy</a></small>
 		</div><!--//container-->
     </footer><!--//footer-->
      
