--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 			<br>
 			<small class="copyright">Pop-up Plugin</a> Provided by <a href="http://www.jacklmoore.com/colorbox/" target="_blank">Jack Moore</a></small>
 			<br>
-			<small class="copyright"><a href="https://runexa.github.io/privacy-policy/" target="_blank">Privacy Policy</a></small>
+			<small class="copyright"><a href="https://runexa.github.io/privacy-policy.html/" target="_blank">Privacy Policy</a></small>
 		</div><!--//container-->
     </footer><!--//footer-->
      
