--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -153,7 +153,7 @@
     <footer class="footer">
         <div class="container text-center">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-            <small class="copyright"><a href="http://themes.3rdwavemedia.com" target="_blank">Template</a> Provided by <a href="https://www.linkedin.com/in/xiaoying" target="_blank">Xiaoying Riley</a> for developers under the <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License (CC BY 3.0)</a></small>
+            <small class="copyright"><a href="http://themes.3rdwavemedia.com" target="_blank">Template</a> Provided by <a href="https://www.linkedin.com/in/xiaoying" target="_blank">Xiaoying Riley</a> for developers under the <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 License (CC BY 3.0)</a></small>
 			<br>
 			<small class="copyright">Pop-up Plugin</a> Provided by <a href="http://www.jacklmoore.com/colorbox/" target="_blank">Jack Moore</a></small>
 		</div><!--//container-->
