--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <!-- 
 
-( U're not Supposed to be here.. :< ) 
-				V
-					/\**/\
-				   ( o_o  )_)
-				   ,(u  u  ,),
-				  {}{}{}{}{}{}
-
+               ________________
+              | U're not belong|_____    __
+              |    here        |     |__|  |_________
+              |________________|     |::|  |        /
+ /\**/\       |                \.____|::|__|      <
+( o_o  )_     |                      \::/  \._______\
+ (u--u   \_)  |
+  (||___   )==\
+,dP"/b/=( /P"/b\
+|8 || 8\=== || 8
+`b,  ,P  `b,  ,P
+  """`     """`
 
 -->
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>RuneXa's Profile</title>
+    <title>Privacy Policy</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
